notification row gap fix

--- a/app/(pages)/(hackers)/_components/IndexHero/NotificationIndividual.module.scss
+++ b/app/(pages)/(hackers)/_components/IndexHero/NotificationIndividual.module.scss
@@ -3,6 +3,10 @@
     top: 100px;
     right: 7.5%;
     z-index: 999;
+    backdrop-filter: blur(15px);
+    row-gap: 100px;
+    display: flex;
+    flex-direction: column;
 }
 
 .container{
@@ -12,8 +16,8 @@
     border-radius: 18px;
     padding: 3%;
     display: flex;
-    margin-bottom: 9%;
     gap: 3%;
+    // margin-bottom: 9%;
 }
 
 .button{
